Update index.html with device list

--- a/pages/index.html
+++ b/pages/index.html
@@ -39,12 +39,7 @@
 <body>
     <div class="container">
         <h1>Device SMS Pages</h1>
-        <ul class="device-list">
-            <li class="device-item">
-                <a href="sms_53ff3746-42e8-465d-a0ec-99e80f31acbe.html" target="_blank">Device #100</a>
-            </li>
-            <!-- Additional devices will be added dynamically -->
-        </ul>
+        <ul class="device-list">        </ul>
     </div>
 </body>
 </html>
