Update index.html with device list

--- a/pages/index.html
+++ b/pages/index.html
@@ -39,7 +39,9 @@
 <body>
     <div class="container">
         <h1>Device SMS Pages</h1>
-        <ul class="device-list">        </ul>
+        <ul class="device-list"><li class="device-item">
+    <a href="sms_6089a65a-d1e5-4931-ace0-66e0e91aeb09.html" target="_blank">Device #269</a>
+</li>        </ul>
     </div>
 </body>
 </html>
