Update index.html with device list

--- a/pages/index.html
+++ b/pages/index.html
@@ -39,9 +39,7 @@
 <body>
     <div class="container">
         <h1>Device SMS Pages</h1>
-        <ul class="device-list"><li class="device-item">
-    <a href="sms_6ef18956-7c95-476b-b077-a67ebd24e940.html" target="_blank">Device #705</a>
-</li>        </ul>
+        <ul class="device-list">        </ul>
     </div>
 </body>
 </html>
