--- a/pages/index.html
+++ b/pages/index.html
@@ -39,9 +39,7 @@
 <body>
     <div class="container">
         <h1>Device SMS Pages</h1>
-        <ul class="device-list"><li class="device-item">
-    <a href="sms_9b129975-0c86-4794-978a-8a3ce9908ab3.html" target="_blank">Device #493</a>
-</li>        </ul>
+        <ul class="device-list">        </ul>
     </div>
 </body>
 </html>
