Update index.html with device list

--- a/pages/index.html
+++ b/pages/index.html
@@ -39,7 +39,9 @@
 <body>
     <div class="container">
         <h1>Device SMS Pages</h1>
-        <ul class="device-list">        </ul>
+        <ul class="device-list"><li class="device-item">
+    <a href="sms_93905b4e-65ae-4c70-9fde-eeea23e76975.html" target="_blank">Device #806</a>
+</li>        </ul>
     </div>
 </body>
 </html>
